Update :Run VM Options